@@ -1,5 +1,11 @@
 2010-09-28 Remi Mommsen <Remigius.Mommsen@cern.ch>
 
+	* tag V06-04-00
+	* No longer write and handle index files.
+	  Requires IOPool/Streamer V07-00-00 or newer.
+
+2010-09-28 Remi Mommsen <Remigius.Mommsen@cern.ch>
+
 	* tag V06-03-01
 	* Use faster Adler32 algorithm from zlib instead of f/w version.
 	* Inline a couple of methods in ChainData.
